--- a/app/controls/weather/weather.template.html
+++ b/app/controls/weather/weather.template.html
@@ -1,34 +1,18 @@
 <div class="weather">
-    <header>McLean, VA</header>
+    <header>{{vm.data.city}}, {{vm.data.state}}</header>
     <main>
-        <div>57&deg;</div>
+        <div>{{vm.data.temperature}}&deg;</div>
         <div>
             <div>
-                <img src="http://l.yimg.com/a/i/us/we/52/34.gif" />
+                <img src="{{vm.data.imageUrl}}" />
             </div>
-            <div>Mostly Sunny</div>
+            <div>{{vm.data.condition}}</div>
         </div>
     </main>
     <footer>
-        <div>
-            <div>Wed</div>
-            <div>61&deg; / 38&deg;</div>
-        </div>
-        <div>
-            <div>Thu</div>
-            <div>65&deg; / 45&deg;</div>
-        </div>
-        <div>
-            <div>Fri</div>
-            <div>72&deg; / 50&deg;</div>
-        </div>
-        <div>
-            <div>Sat</div>
-            <div>73&deg; / 44&deg;</div>
-        </div>
-        <div>
-            <div>Sun</div>
-            <div>68&deg; / 45&deg;</div>
+        <div ng-repeat="item in vm.data.forecasts track by $index">
+            <div>{{item.day}}</div>
+            <div>{{item.high}}&deg; / {{item.low}}&deg;</div>
         </div>
     </footer>
 </div>
