--- a/app/index.html
+++ b/app/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Weather Widget</title>
-    <link rel="stylesheet" href="styles/app.css" />
+
     <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.css" />
+    <link rel="stylesheet" href="styles/bootstrap.css" />
+    <link rel="stylesheet" href="styles/app.css" />
 
     <script data-main="main" src="bower_components/requirejs/require.js"></script>
 </head>
 <body>
-    <div class="container">
-        <weather-widget></weather-widget>
-    </div>
+    <weather-widget city="McLean" state="VA"></weather-widget>
 </body>
 </html>
