Implemented the HAML template and added instructions into the readme file.

--- a/app/controls/weather/weather.template.html
+++ b/app/controls/weather/weather.template.html
@@ -1,18 +1,18 @@
-<div class="weather">
-    <header>{{vm.data.city}}, {{vm.data.state}}</header>
-    <main>
-        <div>{{vm.data.temperature}}&deg;</div>
-        <div>
-            <div>
-                <img src="{{vm.data.imageUrl}}" />
-            </div>
-            <div>{{vm.data.condition}}</div>
-        </div>
-    </main>
-    <footer>
-        <div ng-repeat="item in vm.data.forecasts track by $index">
-            <div>{{item.day}}</div>
-            <div>{{item.high}}&deg; / {{item.low}}&deg;</div>
-        </div>
-    </footer>
+<div class='weather'>
+  <header>{{vm.data.city}}, {{vm.data.state}}</header>
+  <main>
+    <div>{{vm.data.temperature}}&deg;</div>
+    <div>
+      <div>
+        <img src='{{vm.data.imageUrl}}'>
+      </div>
+      <div>{{vm.data.condition}}</div>
+    </div>
+  </main>
+  <footer>
+    <div ng-repeat='item in vm.data.forecasts track by $index'>
+      <div>{{item.day}}</div>
+      <div>{{item.high}}&deg; / {{item.low}}&deg;</div>
+    </div>
+  </footer>
 </div>
